feat: add logs. fix: users and exist users

--- a/plugins/overlander/general/views/mail/exists_verify.htm
+++ b/plugins/overlander/general/views/mail/exists_verify.htm
@@ -1,6 +1,6 @@
-subject = "Mã xác nhận của bạn là {{code}}"
-description = "Mail xác nhận tài khoản"
+subject = "Code Verification"
+description = "Account Verification Email"
 layout = "system"
 ==
 
-<p style="text-align: center;"> Mã xác nhận của bạn là {{code}}</p>
+<p style="text-align: center;"> {{content }}</p>
